[gd_scene load_steps=5 format=3 uid="uid://cbkr4dys0xhb8"]

[ext_resource type="Script" path="res://tiles/tower_pad.gd" id="1_so3og"]
[ext_resource type="Material" uid="uid://dxj6kwcuiwko6" path="res://shaders/pixel_smooth.tres" id="2_keywu"]
[ext_resource type="Texture2D" uid="uid://co5mme4hcgmun" path="res://assets/tiles/TowerPadWater.png" id="3_f4eo4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdvjp"]
size = Vector2(80, 74)

[node name="TowerPad" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_so3og")
_element = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_rdvjp")

[node name="Texture" type="Sprite2D" parent="."]
material = ExtResource("2_keywu")
scale = Vector2(2, 2)
texture = ExtResource("3_f4eo4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
